# docs/openapi.json
@@ -780,7 +780,7 @@
             "type": "string",
             "contentMediaType": "application/octet-stream",
             "title": "File",
-            "description": "Один DOCX, PDF или XLSX"
+            "description": "Один DOCX, PDF, XLSX или TXT"
           }
         },
         "type": "object",
@@ -952,6 +952,12 @@
           },
           "format": {
             "type": "string",
+            "enum": [
+              "docx",
+              "pdf",
+              "xlsx",
+              "txt"
+            ],
             "title": "Format"
           },
           "sha256": {
